--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -365,7 +365,7 @@ elseif(ARCHITECTURE_Aarch64)
          # backend/A64/emit_a64_aes.cpp
          # backend/A64/emit_a64_crc32.cpp
          backend/A64/emit_a64_data_processing.cpp
-         # backend/A64/emit_a64_floating_point.cpp
+         backend/A64/emit_a64_floating_point.cpp
          # backend/A64/emit_a64_packed.cpp
          # backend/A64/emit_a64_saturation.cpp
          # backend/A64/emit_a64_sm4.cpp
