CMakeLists: xbyak should only be linked on x64

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -329,6 +329,8 @@ if (ARCHITECTURE_x86_64)
     else()
         target_sources(dynarmic PRIVATE backend/x64/exception_handler_generic.cpp)
     endif()
+
+    target_link_libraries(dynarmic PRIVATE xbyak)
 elseif(ARCHITECTURE_Aarch64)
     target_sources(dynarmic PRIVATE
          backend/A64/emitter/a64_emitter.cpp
@@ -354,7 +356,6 @@ target_link_libraries(dynarmic
         fmt::fmt
         mp
         tsl::robin_map
-        xbyak
         $<$<BOOL:DYNARMIC_USE_LLVM>:${llvm_libs}>
 )
 if (DYNARMIC_ENABLE_CPU_FEATURE_DETECTION)
