--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -291,8 +291,12 @@ target_link_libraries(dynarmic
         mp
         $<$<BOOL:DYNARMIC_USE_LLVM>:${llvm_libs}>
 )
+
 if (ARCHITECTURE_x86_64)
     target_link_libraries(dynarmic PRIVATE xbyak)
+endif()
+if(ANDROID)
+    target_link_libraries(dynarmic PRIVATE log)
 endif()
 if (DYNARMIC_ENABLE_CPU_FEATURE_DETECTION)
     target_compile_definitions(dynarmic PRIVATE DYNARMIC_ENABLE_CPU_FEATURE_DETECTION=1)
