backend/A64: add fastmem support
fix crash on game close

fix generic exception handler

reorder hostloc gpr list

use temp register instead of X0 for writes

go back to regular std::partition

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -380,7 +380,9 @@ elseif(ARCHITECTURE_Aarch64)
          backend/A64/reg_alloc.cpp
          backend/A64/reg_alloc.h
 
-         backend/A64/exception_handler_generic.cpp
+         backend/A64/exception_handler.h
+         #backend/A64/exception_handler_generic.cpp
+         backend/A64/exception_handler_posix.cpp
     )
 else()
     message(FATAL_ERROR "Unsupported architecture")
